# 2k-3s-aya

./: README.md
RK/rk01/: README.md
RK/rk02/: README.md
RK/rk02/01/: main1.cpp
RK/rk02/03/: main3.cpp
homeworks/Explorer01/hw01(explorer)VS/: hw01(explorer)VS.cpp  hw01(explorer)VS.sln  hw01(explorer)VS.vcxproj  hw01(explorer)VS.vcxproj.filters  stdafx.cpp
homeworks/Explorer02/: .DESCRIPTION.swp  .cat.swp  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  README.md  info.txt  text.txt
homeworks/Explorer02/_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  explorer  explorer-0.1.0.0-Darwin.dmg
homeworks/Explorer02/_build/_CPack_Packages/Darwin/DragNDrop/: sla.r  temp.dmg
homeworks/Explorer02/sources/: a.out  explorer.cpp
homeworks/Explorer03/: CMakeLists.txt  a.out  explorer.cpp
homeworks/Explorer03/_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
homeworks/Explorer03/examples/: example1.cpp
homeworks/Explorer03/include/: explorer.hpp
homeworks/Explorer03/sources/: a.out  example1.cpp  explorer.cpp  explorer.hpp
homeworks/Explorer03/tests/: test1.cpp
homeworks/Network01/: CMakeLists.txt  a.out  client.hpp  main.cpp  network.cpp  test.cpp
homeworks/Network01/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake  example
homeworks/Network01/_builds/_3rdParty/Hunter/: install-root-dir
homeworks/Network01/_builds/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
homeworks/Network01/examples/: main.cpp
homeworks/Network01/include/vk/: client.hpp
homeworks/Network01/sources/: client.cpp
homeworks/Stack0102/: REPORT.md
homeworks/Stack0102/examples/: empty.cpp  init.cpp  pop.cpp  push.cpp
homeworks/Stack0102/include/: Stack.h
homeworks/Stack0102/sources/: main.cpp
homeworks/Stack03/: README.md
homeworks/Stack03/examples/: example1.cpp
homeworks/Stack04/: README.md
homeworks/Stack04/_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  install_manifest.txt
homeworks/Stack04/examples/: example1.cpp
homeworks/Stack04/tests/: test1.cpp  (+2 more)
labs/lab02/: lab2.md
labs/lab03/: README.md
labs/lab04/: README.md
labs/lab05/: README.md
labs/lab06/: README.md
labs/lab07/: README.md
labs/lab08/: ChangeLog.md  README.md
labs/lab09/: CPackConfig.cmake  README.md
labs/lab10/: CMakeLists.txt  README.md
labs/lab11/: CMakeLists.txt  README.md
labs/lab12/: README.md  main.cpp
labs/lab13/: CMakeLists.txt  README.md
labs/lab13/sources/: pack.cpp  unpack.cpp
labs/lab15/: README.md
(+31 files in other folders)
